[package]
name = "myron"
version = "0.1.0"
authors = ["Sam Delmerico <svdelmerico@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.19"
vulkano-shaders = "0.18"
winit = "0.22"
vulkano-win = "0.19"
cgmath = "0.17"

